fix thai navigation ui overlap

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ body {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
